[project]
name = "depth-anything-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "whxway", email = "whxway@whu.edu.cn" }
]
requires-python = ">=3.10"
dependencies = ["torch>=2.7.0",]

[project.scripts]
depth-anything-v2 = "depth_anything_v2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
